--- a/frosting/index.html
+++ b/frosting/index.html
@@ -251,7 +251,7 @@
  <hr/>
  <div class="row" style="text-align:center">
   <div class="col-xs-4 col-lg-12">
-    <iframe src="https://drive.google.com/file/d/1xeKcZ0g2yXmkIAEFCGd3qPgcFT1l3kq7/preview"
+    <iframe src="https://drive.google.com/file/d/1MiyyvvMsluCwgw13JcEWOTJ0f7V97K6g/preview"
      width=50% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
     <p style="text-align:center">(a) A knight practicing fencing </p>
   </div>
@@ -277,7 +277,7 @@
 <br>
 
 <p>
-  Frosting reaches the better rendering performance than other editable radiance field methods, 
+  Frosting reaches better rendering performance than other editable radiance field methods, 
   and obtains competitive results compared to vanilla 3D Gaussian Splatting. 
   Frosting is even able to outperform vanilla 3DGS when reconstructing scenes with many fuzzy materials,
   such as the scenes from the <a href="https://research.nvidia.com/labs/toronto-ai/adaptive-shells/">Shelly dataset</a>.
