--- a/frosting/index.html
+++ b/frosting/index.html
@@ -250,10 +250,15 @@
  <h2>Animation</h2>
  <hr/>
  <div class="row" style="text-align:center">
-  <div class="col-xs-4 col-lg-12">
+  <div class="col-xs-4 col-lg-6">
     <iframe src="https://drive.google.com/file/d/1MiyyvvMsluCwgw13JcEWOTJ0f7V97K6g/preview"
-     width=50% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+     width=100% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
     <p style="text-align:center">(a) A knight practicing fencing </p>
+  </div>
+  <div class="col-xs-4 col-lg-6">
+    <iframe src="https://drive.google.com/file/d/1nKqO93pzbbN-HEXtUo5klO6sPu6kHG_X/preview"
+     width=100% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+    <p style="text-align:center">(b) Buzz dancing on a bench</p>
   </div>
 </div>
 
