--- a/frosting/index.html
+++ b/frosting/index.html
@@ -94,9 +94,9 @@
    <!-- <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/MAkFyWfiBQo?si=mIN-4Wk3P2sWBG7C" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe> -->
-  <iframe src="https://drive.google.com/file/d/1PprM89bC8_iXpen21-sxX50rPkwKff0i/preview"
+  <iframe src="https://drive.google.com/file/d/1oov9S0Cw0LKr31M-bWpr1JAdG-fG49Er/preview"
      width=100% height="620px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-  <i><b>The full presentation video is coming soon.</b></i>
+  <!-- <i><b>The full presentation video is coming soon.</b></i> -->
    <div class="wrapper">
      <!-- <div class="col-xs-4 col-lg-6;"> -->
       <p style="text-align: justify">
@@ -114,6 +114,7 @@
   <hr/>
   <p>
     <ul>
+      <li> <b>03/22/2024</b>: Added examples of animation to the presentation video and the web page. </li>
       <li> <b>03/21/2024</b>: Initial release of the paper. </li>
     </ul>
   </p>
@@ -256,7 +257,7 @@
     <p style="text-align:center">(a) A knight practicing fencing </p>
   </div>
   <div class="col-xs-4 col-lg-6">
-    <iframe src="https://drive.google.com/file/d/1nKqO93pzbbN-HEXtUo5klO6sPu6kHG_X/preview"
+    <iframe src="https://drive.google.com/file/d/1YoQb-jZrkyUzx7L5IQi9DL0EABI0_1Ro/preview"
      width=100% height="310px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
     <p style="text-align:center">(b) Buzz dancing on a bench</p>
   </div>
