Added YouTube video.

--- a/frosting/index.html
+++ b/frosting/index.html
@@ -88,14 +88,15 @@
 
  <div class="row" style="padding:2rem">
    <div class="col-xs-12">
-   <!-- <img src="https://anttwo.github.io/sugar/results/full_teaser.png" alt="full_teaser.png" class="text-center" style="width: 99%; max-width: 1920px"> -->
    <!-- <video autoplay loop muted playsinline src="teaser.mp4" style="width:95%; max-width: 900px"></video> -->
-   <!--<img src="teaser.gif" alt="teaser.gif" class="text-center" style="width: 95%; max-width: 900px">-->
    <!-- <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/MAkFyWfiBQo?si=mIN-4Wk3P2sWBG7C" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
           style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe> -->
-  <iframe src="https://drive.google.com/file/d/1oov9S0Cw0LKr31M-bWpr1JAdG-fG49Er/preview"
-     width=100% height="620px" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+  <!-- <iframe src="https://drive.google.com/file/d/1oov9S0Cw0LKr31M-bWpr1JAdG-fG49Er/preview"
+     width=100% height="620px" frameborder="0" allow="autoplay" allowfullscreen></iframe> -->
+  <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/h7LeWq8sG78?si=kswDyv2XOHlNfou5" frameborder="0"
+     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+     style="width:100%; height:620px; clip-path:inset(1px 1px);" allowfullscreen></iframe>
   <!-- <i><b>The full presentation video is coming soon.</b></i> -->
    <div class="wrapper">
      <!-- <div class="col-xs-4 col-lg-6;"> -->
