--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
-        <p class="label date">03-2024</p> I was invited by <a href="https://grgkopanas.github.io/">George Kopanas</a> and <a href="https://snosixtyboo.github.io/">Bernard Kerbl</a> 
+        <p class="label date">03-2024</p> I was invited by <a href="https://grgkopanas.github.io/">George Kopanas</a> and <a href="https://snosixtyboo.github.io/">Bernhard Kerbl</a> 
         to give a talk about Surface Reconstruction using Gaussian Splatting during the <a href="https://3dgstutorial.github.io/index.html">3DV 2024 tutorial on Gaussian Splatting</a>.<br>
         <p class="label date">02-2024</p> <a href="https://anttwo.github.io/sugar/">SuGaR</a> paper has been accepted to CVPR 2024!<br>
         <p class="label date">03-2023</p> <a href="https://anttwo.github.io/MACARONS/">MACARONS</a> paper has been accepted to CVPR 2023!<br>
