Updated with ECCV acceptance.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">07-2024</p> <a href="https://anttwo.github.io/frosting/">Gaussian Frosting</a> paper has been accepted to ECCV 2024!<br>
+        <p class="label date">04-2024</p> I was invited by <a href="https://scholar.google.com/citations?user=SXXEZhYAAAAJ&hl=en">Pr. Ko Nishino from Kyoto University</a> to work in Japan for 6 weeks. It really was a great experience!<br>
         <p class="label date">03-2024</p> I was invited by <a href="https://grgkopanas.github.io/">George Kopanas</a> and <a href="https://snosixtyboo.github.io/">Bernhard Kerbl</a> 
         to give a talk about Surface Reconstruction using Gaussian Splatting during the <a href="https://3dgstutorial.github.io/index.html">3DV 2024 tutorial on Gaussian Splatting</a>.<br>
         <p class="label date">02-2024</p> <a href="https://anttwo.github.io/sugar/">SuGaR</a> paper has been accepted to CVPR 2024!<br>
@@ -125,7 +127,7 @@
                 <a href="https://anttwo.github.io/frosting/">
                     <h4>Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering</h4>
                 </a>
-                <p style="font-size: 20px;">arXiv 2024</p>
+                <p style="font-size: 20px;">ECCV 2024</p>
                 <div>
                     <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
                     <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
