--- a/index.html
+++ b/index.html
@@ -188,14 +188,12 @@
                     <div class="card">
                         <div class="card-block">
                             <pre class="card-text clickselect">
-                                @misc{guedon2023sugar,
-                                    title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering}, 
-                                    author={Antoine Guédon and Vincent Lepetit},
-                                    year={2023},
-                                    eprint={2311.12775},
-                                    archivePrefix={arXiv},
-                                    primaryClass={cs.GR}
-                              }
+                                @article{guedon2023sugar,
+                                    title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering},
+                                    author={Gu{\'e}don, Antoine and Lepetit, Vincent},
+                                    journal={CVPR},
+                                    year={2024}
+                                }
                         </div>
                       </div>
                 </div>
