--- a/sugar/index.html
+++ b/sugar/index.html
@@ -643,8 +643,8 @@
       @article{guedon2023sugar,
         title={SuGaR: Surface-Aligned Gaussian Splatting for Efficient 3D Mesh Reconstruction and High-Quality Mesh Rendering},
         author={Gu{\'e}don, Antoine and Lepetit, Vincent},
-        journal={arXiv preprint arXiv:2311.12775},
-        year={2023}
+        journal={CVPR},
+        year={2024}
       }</pre>
    </div>
  </div>
