Updated Frosting bibtex.

--- a/frosting/index.html
+++ b/frosting/index.html
@@ -463,7 +463,7 @@
       @article{guedon2024frosting,
         title={Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering},
         author={Gu{\'e}don, Antoine and Lepetit, Vincent},
-        journal={arXiv preprint arXiv:2403.14554},
+        journal={ECCV},
         year={2024}
       }</pre>
    </div>
