--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
                 <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                     <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
                 </a>
-                <div class="collapse" id="collapse3">
+                <div class="collapse" id="collapse4">
                     <div class="card">
                         <div class="card-block">
                             <pre class="card-text clickselect">
                                 @article{guedon2024frosting,
                                     title={Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering},
                                     author={Gu{\'e}don, Antoine and Lepetit, Vincent},
-                                    journal={arXiv preprint arXiv:2403.14554},
+                                    journal={ECCV},
                                     year={2024}
                               }
                         </div>
@@ -233,7 +233,7 @@
                             <pre class="card-text clickselect">
                                 @inproceedings{guedon2023macarons,
                                     title={{MACARONS: Mapping And Coverage Anticipation with RGB ONline Self-supervision}},
-                                    author={Gu&eacutedon, Antoine and Monnier, Tom and Monasse, Pascal and Lepetit, Vincent},
+                                    author={Gu{\'e}don, Antoine and Monnier, Tom and Monasse, Pascal and Lepetit, Vincent},
                                     booktitle={{CVPR}},
                                     year={2023},
                                 }
@@ -277,7 +277,7 @@
                             <pre class="card-text clickselect">
                                 @inproceedings{guedon2022scone,
                                     title={{SCONE: Surface Coverage Optimization in Unknown Environments by Volumetric Integration}},
-                                    author={Gu\'edon, Antoine and Monasse, Pascal and Lepetit, Vincent},
+                                    author={Gu{\'e}don, Antoine and Monasse, Pascal and Lepetit, Vincent},
                                     booktitle={{Advances in Neural Information Processing Systems}},
                                     year={2022},
                                   }
