ECCV acceptance update.

--- a/frosting/index.html
+++ b/frosting/index.html
@@ -115,6 +115,7 @@
   <hr/>
   <p>
     <ul>
+      <li> <b>07/01/2024</b>: Frosting has been accepted to ECCV 2024!<br>
       <li> <b>03/22/2024</b>: Added examples of animation to the presentation video and the web page. </li>
       <li> <b>03/21/2024</b>: Initial release of the paper. </li>
     </ul>
