Updated ECCV 2024 Oral for Frosting.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <a href="https://anttwo.github.io/frosting/">
                     <h4>Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering</h4>
                 </a>
-                <p style="font-size: 20px;">ECCV 2024</p>
+                <p style="font-size: 20px;">ECCV 2024 (Oral)</p>
                 <div>
                     <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
                     <a href="https://vincentlepetit.github.io/">Vincent Lepetit</a>
