--- a/frosting/index.html
+++ b/frosting/index.html
@@ -53,7 +53,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">Gaussian Frosting: Editable Complex Radiance Fields with Real-Time Rendering</h1>
-   <h1 style="font-size: xxx-large;">ECCV 2024</h1>
+   <h1 style="font-size: xxx-large;">ECCV 2024 (Oral)</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
