--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">08-2024</p> <a href="https://anttwo.github.io/frosting/">Gaussian Frosting</a> paper has been selected for an oral presentation at ECCV 2024!<br>
         <p class="label date">07-2024</p> <a href="https://anttwo.github.io/frosting/">Gaussian Frosting</a> paper has been accepted to ECCV 2024!<br>
         <p class="label date">04-2024</p> I was invited by <a href="https://scholar.google.com/citations?user=SXXEZhYAAAAJ&hl=en">Pr. Ko Nishino from Kyoto University</a> to work in Japan for 6 weeks. It really was a great experience!<br>
         <p class="label date">03-2024</p> I was invited by <a href="https://grgkopanas.github.io/">George Kopanas</a> and <a href="https://snosixtyboo.github.io/">Bernhard Kerbl</a> 
