Updated Frosting's code.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 This representation captures both complex volumetric effects created by fuzzy materials such as hair or grass as well as flat surfaces. 
                 Built from RGB images only, it can be rendered in real-time and animated using traditional animation tools. <br>
                 <a class="label label-info" href="https://arxiv.org/abs/2403.14554"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
-                <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code (coming soon)</a>
+                <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code</a>
                 <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
                 <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                     <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
