--- a/frosting/index.html
+++ b/frosting/index.html
@@ -80,7 +80,7 @@
    <div class="col-xs-12">
    <h3 style="text-align:center; padding-bottom:1rem">
      <a class="label label-info" href="https://arxiv.org/abs/2403.14554"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
-     <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code (coming soon)</a>
+     <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code</a>
      <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;BibTeX</a>
    </h3>
    </div>
