Minor update about blender add-on.

--- a/frosting/index.html
+++ b/frosting/index.html
@@ -81,6 +81,7 @@
    <h3 style="text-align:center; padding-bottom:1rem">
      <a class="label label-info" href="https://arxiv.org/abs/2403.14554"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
      <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code</a>
+     <a class="label label-info" href="https://github.com/Anttwo/sugar_frosting_blender_addon/"><i class="fa fa-gamepad fa-lg" style="vertical-align:top; margin-top:5px"></i>&nbsp;&nbsp;Blender Add-On</a>
      <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;BibTeX</a>
    </h3>
    </div>
@@ -115,7 +116,9 @@
   <hr/>
   <p>
     <ul>
-      <li> <b>07/01/2024</b>: Frosting has been accepted to ECCV 2024!<br>
+      <li> <b>09/23/2024</b>: We just released a <a href="https://github.com/Anttwo/sugar_frosting_blender_addon/">Blender Add-On</a> to import, edit and animate Frosting scenes without a single line of code! </li>
+      <li> <b>08/16/2024</b>: Frosting has been selected for an oral presentation at ECCV 2024! </li>
+      <li> <b>07/01/2024</b>: Frosting has been accepted to ECCV 2024!</li>
       <li> <b>03/22/2024</b>: Added examples of animation to the presentation video and the web page. </li>
       <li> <b>03/21/2024</b>: Initial release of the paper. </li>
     </ul>
