--- a/sugar/index.html
+++ b/sugar/index.html
@@ -81,7 +81,7 @@
    <h3 style="text-align:center; padding-bottom:1rem">
      <a class="label label-info" href="https://arxiv.org/abs/2311.12775"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
      <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-code fa-lg" style="vertical-align: top; margin-top: 6px"></i>&nbsp;&nbsp;Code</a>
-     <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-gamepad fa-lg" style="vertical-align:top; margin-top:5px"></i>&nbsp;&nbsp;Demo (coming soon)</a>
+     <a class="label label-info" href="https://github.com/Anttwo/sugar_frosting_blender_addon/"><i class="fa fa-gamepad fa-lg" style="vertical-align:top; margin-top:5px"></i>&nbsp;&nbsp;Blender Add-On</a>
      <!-- <a class="label label-info" href="https://youtu.be/8_QNKaCyr4Y"><i class="fa fa-area-chart fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;Presentation</a> -->
      <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:top;margin-top:6px"></i>&nbsp;&nbsp;BibTeX</a>
    </h3>
@@ -118,6 +118,7 @@
   <hr/>
   <p>
     <ul>
+      <li> <b>09/23/2024</b>: We just released a <a href="https://github.com/Anttwo/sugar_frosting_blender_addon/">Blender Add-On</a> to import, edit and animate SuGaR scenes without a single line of code! </li>
       <li> <b>01/09/2024</b>: We've just added a dedicated viewer to explore in real-time scenes reconstructed with SuGaR. 
         The viewer lets you switch between the hybrid representation (mesh+Gaussians), the textured mesh and the wireframe mesh! </li>
       <li> <b>12/20/2023</b>: We released the code for SuGaR! </li>
