--- a/sugar/index.html
+++ b/sugar/index.html
@@ -34,7 +34,8 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
- <link href="style_2.css" rel="stylesheet">
+ <!-- <link href="style_2.css" rel="stylesheet"> -->
+ <link href="../base2.css" rel="stylesheet">
 
 <!--  Google Analytics (DO NOT copy/paste following section, setup your own analytics tag at https://analytics.google.com/analytics/web/)  -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDL4R10HKE"></script>
@@ -46,6 +47,9 @@
   gtag('config', 'G-CDL4R10HKE');
 </script>
 <!-- End Google Analytics -->
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
 </head>
 <body>
@@ -109,7 +113,7 @@
           width=100% height="380px" frameborder="0" allow="autoplay" allowfullscreen></iframe> -->
   <iframe class="embed-responsive-item text-center" src="https://www.youtube.com/embed/MAkFyWfiBQo?si=mIN-4Wk3P2sWBG7C" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          style="width:100%; height:540px; clip-path:inset(1px 1px);" allowfullscreen></iframe>   
+          style="width:100%; height:620px; clip-path:inset(1px 1px);" allowfullscreen></iframe>   
 
 </div>
 
@@ -611,33 +615,11 @@
   </div>
 </div>
 
- <h2>Resources</h2>
+ <h2>BibTeX</h2>
  <hr/>
- <div class="row" style="text-align: center">
-   <div class="col-xs-4 col-lg-6">
-     <h4>Paper</h4>
-     <!-- <a href="https://arxiv.org/abs/2303.03315" style="color:inherit"> -->
-     <a href="https://arxiv.org/abs/2311.12775" style="color:inherit"></a>
-       <!-- <img src="./paper.png" alt="paper.png" class="text-center" style="max-width:70%; border:0.15em solid;
-       border-radius:0.5em;"></a> -->
-   </div>
-   <div class="col-xs-4 col-lg-6">
-     <h4>Code</h4>
-     <a href="https://github.com/Anttwo/SuGaR" style="color:inherit;"></a>
-       <!-- <img src="" alt="github_repo.png" class="text-center" style="max-width:70%; border:0.15em solid;
-       border-radius:0.5em;"> -->
-   </div>
-   <!-- <div class="col-xs-4 col-lg-4">
-     <h4>Presentation</h4>
-     <a href="https://youtu.be/8_QNKaCyr4Y" style="color:inherit">
-       <img src="./slides.png" alt="slides.png" class="text-center"
-       style="width:63%; max-width: 250px; border:0.15em solid; border-radius:0.5em"></a>
-   </div> -->
- </div>
-
 <!-- TO DO: BIBTEX -->
- <h4 style="padding-top:0.5em">BibTeX</h4>
  If you find this work useful for your research, please cite:
+ <br><br>
  <div class="card">
    <div class="card-block">
      <pre class="card-text clickselect">
@@ -681,6 +663,28 @@
    back to this page and remove the analytics.<br>
  </p>
 </div>
+
+<!-- Dark mode toggle -->
+<script>
+  const themeToggle = document.createElement('button');
+  themeToggle.className = 'theme-toggle';
+  themeToggle.innerHTML = '<span class="material-icons-outlined">dark_mode</span>';
+
+  themeToggle.addEventListener('click', () => {
+      const currentTheme = document.documentElement.getAttribute('data-theme');
+      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+      document.documentElement.setAttribute('data-theme', newTheme);
+      localStorage.setItem('theme', newTheme);
+      themeToggle.innerHTML = newTheme === 'dark' ? '<span class="material-icons-outlined">light_mode</span>' : '<span class="material-icons-outlined">dark_mode</span>';
+  });
+
+  // Check for saved theme preference
+  const savedTheme = localStorage.getItem('theme') || 'light';
+  document.documentElement.setAttribute('data-theme', savedTheme);
+  themeToggle.innerHTML = savedTheme === 'dark' ? '<span class="material-icons-outlined">light_mode</span>' : '<span class="material-icons-outlined">dark_mode</span>';
+
+  document.body.appendChild(themeToggle);
+</script>
 
 </body>
 </html>
