--- a/matcha/index.html
+++ b/matcha/index.html
@@ -116,7 +116,9 @@
         <b>Gaussian surfels</b>.
         We initialize the charts with a <b>monocular depth estimation model</b> and refine them using 
         <b>differentiable Gaussian rendering</b> and a <b>lightweight neural chart deformation model</b>.
-        Combined with a sparse-view SfM model like MASt3R-SfM, MAtCha can recover <b>sharp and accurate surface meshes</b> 
+        Combined with a sparse-view SfM model like 
+        <a href="https://europe.naverlabs.com/research/publications/mast3r-sfm-a-fully-integrated-solution-for-unconstrained-structure-from-motion/">MASt3R-SfM</a>, 
+        MAtCha can recover <b>sharp and accurate surface meshes</b> 
         of both <b>foreground and background objects</b> in <b>unbounded scenes</b> within minutes, only from 
         <b>a few unposed RGB images</b>. 
       </p>
