--- a/matcha/index.html
+++ b/matcha/index.html
@@ -574,7 +574,7 @@
 
  <h2>Further information</h2>
  <hr/>
- If you like this project, check out our previous works related to 3D reconstruction and differentiable rendering:
+ If you like this project, check out our previous works related to 3D reconstruction and Gaussian Splatting:
  <ul>
     <li>
       <a href="https://anttwo.github.io/frosting/">Gu&eacutedon and Lepetit. - 
