--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 We propose a novel surface representation for reconstructing high-quality 3D meshes with photorealistic rendering from sparse-view images.
                 Our key idea is to model the underlying scene geometry as an Atlas of Charts which we render with 2D Gaussian surfels.
                 Combined with a sparse-view SfM model like MASt3R-SfM, MAtCha can recover sharp meshes of both foreground and background objects within minutes from a few unposed RGB images.  <br>
-                <a class="label label-info" href=""><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
+                <a class="label label-info" href="https://arxiv.org/abs/2412.06767"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
                 <a class="label label-info" href="https://github.com/Anttwo/MAtCha"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code (coming soon)</a>
                 <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
                 <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
