--- a/matcha/index.html
+++ b/matcha/index.html
@@ -163,8 +163,7 @@
         </div>
       </div>
       <div class="carousel-caption">
-        <h3>Bicycle (Mip-NeRF 360)</h3>
-        <p>10 training images.</p>
+        <h3>Bicycle (Mip-NeRF 360) - 10 training images</h3>
       </div>
     </div>
 
@@ -178,8 +177,7 @@
         </div>
       </div>
       <div class="carousel-caption">
-        <h3>Scan 21 (DTU)</h3>
-        <p>3 training images.</p>
+        <h3>Scan 21 (DTU) - 3 training images</h3>
       </div>
     </div>
 
@@ -193,8 +191,7 @@
         </div>
       </div>
       <div class="carousel-caption">
-        <h3>Garden (Mip-NeRF 360)</h3>
-        <p>10 training images.</p>
+        <h3>Garden (Mip-NeRF 360) - 10 training images</h3>
       </div>
     </div>
   </div>
@@ -209,6 +206,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<br>
 
 <p>
     We present a novel appearance model that simultaneously realizes explicit <b>high-quality 3D surface mesh recovery</b> 
