--- a/matcha/index.html
+++ b/matcha/index.html
@@ -148,6 +148,7 @@
     <li data-target="#resultsCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#resultsCarousel" data-slide-to="1"></li>
     <li data-target="#resultsCarousel" data-slide-to="2"></li>
+    <li data-target="#resultsCarousel" data-slide-to="3"></li>
     <!-- Add more indicators as needed -->
   </ol>
 
@@ -193,6 +194,20 @@
       <div class="carousel-caption">
         <h3>Garden (Mip-NeRF 360) - 10 training images</h3>
       </div>
+    </div>
+
+
+    <div class="item">
+        <!-- <div class="video-container"> -->
+          <iframe src="https://drive.google.com/file/d/1eK59AsKKCX1FEYH8FL-xdnJblFF_yvH0/preview" 
+            style="width:100%; height:310px" 
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <!-- </div> -->
+        <div class="carousel-caption">
+          <h3>Gundam (Custom Scene) - 10 training images</h3>
+        </div>
     </div>
   </div>
 
