--- a/matcha/index.html
+++ b/matcha/index.html
@@ -169,28 +169,22 @@
     </div>
 
     <div class="item">
-      <div class="row">
-        <div class="col-xs-6">
-          <img src="./images/results/scan21/render.png" alt="Result 2" style="width:100%; max-width:1200px; margin:auto;">
-        </div>
-        <div class="col-xs-6">
-          <img src="./images/results/scan21/rend_normal.png" alt="Result 2" style="width:100%; max-width:1200px; margin:auto;">
-        </div>
-      </div>
+         <iframe src="https://drive.google.com/file/d/1DAsBDYGShrVTVpmTgiTr0QqLvWE5emha/preview" 
+            style="width:100%; height:310px" 
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
       <div class="carousel-caption">
         <h3>Scan 21 (DTU) - 3 training images</h3>
       </div>
     </div>
 
     <div class="item">
-      <div class="row">
-        <div class="col-xs-6">
-          <img src="./images/results/garden/render.png" alt="Result 3" style="width:100%; max-width:1200px; margin:auto;">
-        </div>
-        <div class="col-xs-6">
-          <img src="./images/results/garden/rend_normal.png" alt="Result 3" style="width:100%; max-width:1200px; margin:auto;">
-        </div>
-      </div>
+      <iframe src="https://drive.google.com/file/d/1HrFkHNZqX5umnjAMb3FuOhLlCH2Xl4Ou/preview" 
+            style="width:100%; height:310px" 
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
       <div class="carousel-caption">
         <h3>Garden (Mip-NeRF 360) - 10 training images</h3>
       </div>
