--- a/matcha/index.html
+++ b/matcha/index.html
@@ -150,14 +150,27 @@
     <li data-target="#resultsCarousel" data-slide-to="2"></li>
     <li data-target="#resultsCarousel" data-slide-to="3"></li>
     <li data-target="#resultsCarousel" data-slide-to="4"></li>
+    <li data-target="#resultsCarousel" data-slide-to="5"></li>
     <!-- Add more indicators as needed -->
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
+    
+    <!-- Garden -->
+    <div class="item active">
+      <iframe src="https://drive.google.com/file/d/1HrFkHNZqX5umnjAMb3FuOhLlCH2Xl4Ou/preview" 
+            style="width:100%; height:310px" 
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+      <div class="carousel-caption">
+        <h3>Garden (Mip-NeRF 360) - 10 training images</h3>
+      </div>
+    </div>
 
     <!-- Bicycle -->
-    <div class="item active">
+    <div class="item">
       <iframe src="https://drive.google.com/file/d/11UgQilGKh7W_uCeYW0SrdksY7WQSyAsG/preview" 
             style="width:100%; height:310px" 
             frameborder="0"
@@ -192,18 +205,6 @@
       </div>
     </div>
 
-    <!-- Garden -->
-    <div class="item">
-      <iframe src="https://drive.google.com/file/d/1HrFkHNZqX5umnjAMb3FuOhLlCH2Xl4Ou/preview" 
-            style="width:100%; height:310px" 
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-      <div class="carousel-caption">
-        <h3>Garden (Mip-NeRF 360) - 10 training images</h3>
-      </div>
-    </div>
-
     <!-- Gundam -->
     <div class="item">
           <iframe src="https://drive.google.com/file/d/1eK59AsKKCX1FEYH8FL-xdnJblFF_yvH0/preview" 
@@ -215,6 +216,19 @@
           <h3>Gundam (Custom Scene) - 10 training images</h3>
         </div>
     </div>
+
+    <!-- Scan 24 -->
+    <div class="item">
+      <iframe src="https://drive.google.com/file/d/1Q4SsqI1dg8zu02xoGmx7XQnpRVdbC8Ua/preview" 
+         style="width:100%; height:310px" 
+         frameborder="0"
+         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+         allowfullscreen></iframe>
+   <div class="carousel-caption">
+     <h3>Scan 24 (DTU) - 3 training images</h3>
+   </div>
+ </div>
+    
   </div>
 
   <!-- Left and right controls -->
