--- a/index.html
+++ b/index.html
@@ -156,7 +156,15 @@
                     <div class="card">
                         <div class="card-block">
                             <pre class="card-text clickselect">
-                                To do.
+                                @misc{guédon2024matchagaussiansatlascharts,
+                                    title={MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views}, 
+                                    author={Gu{\'e}don, Antoine and Ichikawa, Tomoki and Yamashita, Kohei and Nishino, Ko},
+                                    year={2024},
+                                    eprint={2412.06767},
+                                    archivePrefix={arXiv},
+                                    primaryClass={cs.CV},
+                                    url={https://arxiv.org/abs/2412.06767}, 
+                                }
                         </div>
                       </div>
                 </div>
