--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="card">
                         <div class="card-block">
                             <pre class="card-text clickselect">
-                                @misc{guédon2024matchagaussiansatlascharts,
+                                @misc{guedon2024matchagaussiansatlascharts,
                                     title={MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views}, 
                                     author={Gu{\'e}don, Antoine and Ichikawa, Tomoki and Yamashita, Kohei and Nishino, Ko},
                                     year={2024},
