--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                 <a class="label label-info" href="https://arxiv.org/abs/2412.06767"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
                 <a class="label label-info" href="https://github.com/Anttwo/MAtCha"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code (coming soon)</a>
                 <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
-                <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse4">
                     <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
                 </a>
-                <div class="collapse" id="collapse4">
+                <div class="collapse" id="collapse5">
                     <div class="card">
                         <div class="card-block">
                             <pre class="card-text clickselect">
@@ -165,6 +165,7 @@
                                     primaryClass={cs.CV},
                                     url={https://arxiv.org/abs/2412.06767}, 
                                 }
+                            </pre>
                         </div>
                       </div>
                 </div>
@@ -206,7 +207,8 @@
                                     author={Gu{\'e}don, Antoine and Lepetit, Vincent},
                                     journal={ECCV},
                                     year={2024}
-                              }
+                                }
+                            </pre>
                         </div>
                       </div>
                 </div>
@@ -250,6 +252,7 @@
                                     journal={CVPR},
                                     year={2024}
                                 }
+                            </pre>
                         </div>
                       </div>
                 </div>
